Bug 458007 - Desktop icons shift when non-auto-hide Panel loads on boot which can position icons weirdly; desktop should reserve space for it in advance
Summary: Desktop icons shift when non-auto-hide Panel loads on boot which can position...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Folder View widget (other bugs)
Version First Reported In: 6.2.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 424662 468733 492003 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-17 18:37 UTC by Wolfgang.W
Modified: 2024-11-26 00:53 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
attachment-5416-0.html (deleted)
2022-08-18 14:45 UTC, Wolfgang.W
Details
attachment-8179-0.html (deleted)
2022-08-18 15:03 UTC, Wolfgang.W
Details
KDE start, with window bar permanently displayed. Icons move toward the center of the screen (3.58 MB, video/x-msvideo)
2022-08-23 06:52 UTC, Wolfgang.W
Details
Icons positions before (368.42 KB, image/png)
2023-05-30 14:43 UTC, Artem
Details
Icons positions after (368.42 KB, image/png)
2023-05-30 14:44 UTC, Artem
Details
Icons positions after (367.71 KB, image/png)
2023-05-30 14:46 UTC, Artem
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang.W 2022-08-17 18:37:49 UTC
Icons in KDE desktop slide off the window bar on every launch. This can only be avoided by selecting the "Hide automatically" option. Then the symbols stay where they are. Another error is to be found in the activities. These are occasionally completely deleted. I.e. from 3 created activities all symbols are gone. Many thanks for your help
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Betriebssystem: Arch Linux
KDE-Plasma-Version: 5.25.4
KDE-Frameworks-Version: 5.97.0
Qt-Version: 5.15.5
Kernel-Version: 5.15.60-1-lts (64-bit)
Grafik-Plattform: X11
Prozessoren: 4 × Intel® Core™ i5-4460 CPU @ 3.20GHz
Speicher: 7,7 GiB Arbeitsspeicher
Grafikprozessor: NV136
Hersteller: ASUS
Produktname: All Series

ADDITIONAL INFORMATION

17.08.22 20:13	systemd	Started Accessibility.
17.08.22 20:13	systemd	Started KScreen.
17.08.22 20:13	systemd	Started Discover.
17.08.22 20:13	systemd	Started Calendar Reminders.
17.08.22 20:13	systemd	app-klipper@autostart.service: Skipped due to 'exec-condition'.
17.08.22 20:13	systemd	Condition check resulted in Klipper being skipped.
17.08.22 20:13	kded5	Known activities: ("55f959a9-f8f9-421e-8634-b025dae11e2a", "bc360af3-6dd0-4a0a-8f08-5a5ed27becb6")
17.08.22 20:13	kaccess	Xlib XKB extension major= 1  minor= 0
17.08.22 20:13	systemd	Started KGpg.
17.08.22 20:13	systemd	Reached target Startup of XDG autostart applications.
17.08.22 20:13	kded5	org.kde.plasma.dataengine.geolocation: error:  "Unbekannter Rechner location.services.mozilla.com: Rechner konnte nicht gefunden werden"
17.08.22 20:13	kded5	org.kde.plasma.dataengine.geolocation: error:  "Unbekannter Rechner location.services.mozilla.com: Rechner konnte nicht gefunden werden"
17.08.22 20:13	kscreen_backend_launcher	kscreen.xrandr: Connected output 101 to CRTC 94
17.08.22 20:13	kscreen_backend_launcher	kscreen.xcb.helper: Detected XRandR 1.6
17.08.22 20:13	kscreen_backend_launcher	kscreen.xcb.helper: Event Base:  89
17.08.22 20:13	kscreen_backend_launcher	kscreen.xcb.helper: Event Error:  147
17.08.22 20:13	kscreen_backend_launcher	kscreen.xrandr: XRandR::setConfig
Comment 1 Nate Graham 2022-08-17 20:25:05 UTC
Thanks for the bug report! Unfortunately we need a single bug report per issue; don't report multiple problems in a single one. Let's focus on the panel issue.

Can you clarify what you mean by they "slide off the window bar on every launch"? When you launch an app by clicking on its icon, the icon disappears? Or something else?
Comment 2 Wolfgang.W 2022-08-18 12:36:46 UTC
[Removed due to containing sensitive information]
Comment 3 Wolfgang.W 2022-08-18 12:42:25 UTC
[Removed due to containing sensitive information]
Comment 4 Nate Graham 2022-08-18 13:50:35 UTC
Let's keep the discussion here, in public.

Can you attach a screen recording that shows the issue happening?
Comment 5 Wolfgang.W 2022-08-18 14:21:48 UTC
[Removed due to containing sensitive information]
Comment 6 Wolfgang.W 2022-08-18 14:27:44 UTC
[Removed due to containing sensitive information]
Comment 7 Wolfgang.W 2022-08-18 14:29:25 UTC
[Removed due to containing sensitive information]
Comment 8 Wolfgang.W 2022-08-18 14:38:52 UTC
[Removed due to containing sensitive information]
Comment 9 Wolfgang.W 2022-08-18 14:45:25 UTC
Created attachment 151406 [details]
attachment-5416-0.html

[Removed due to containing sensitive information]
Comment 10 Nate Graham 2022-08-18 14:52:38 UTC
It seems like there's some confusion here.

This is the KDE bug tracker; it's used for tracking bugs in KDE software. It's not a user support system. Support requests should be directed to your distro or the KDE forum. If there's a bug report here, it means there is a possible bug in KDE software. You might want to read through https://community.kde.org/Get_Involved/Issue_Reporting.

My job is to triage these reports so that they can become actionable for developers (or so I can fix them myself, if they're easy). To do that, I have to be able to reproduce the issue myself. Right now I can't do that because it's not clear to me what exactly is going on because you're using nonstandard terminology. Which is fine; you can't be expected to know what we call everything! But as a result, I don't know if you're talking about a Plasma panel or a Latte Dock panel; I don't know if the icons you're referring to are pinned Task Manager apps, or standalone launcher icons; I don't know if you're using a traditional Task Manager or an Icons-Only Task manager, and so on. The fastest way for me to get answers to these questions is if you attach a screen recording so I can see for myself what's happening.

Email is no good because, again, this isn't a user support system. Bug reports are discussed in the open, in public. So comments, files and attachments need to be here, in this bug report.

Can you please attach the requested screen recording? Thanks!

If it's too large to fit, you can also upload it somewhere else and paste a link to it here.
Comment 11 Wolfgang.W 2022-08-18 14:57:46 UTC
Comment on attachment 151406 [details]
attachment-5416-0.html

[Removed due to containing sensitive information]
Comment 12 Wolfgang.W 2022-08-18 15:00:35 UTC
[Removed due to containing sensitive information]
Comment 13 Wolfgang.W 2022-08-18 15:03:37 UTC
Created attachment 151408 [details]
attachment-8179-0.html

[Removed due to containing sensitive information]
Comment 14 Nate Graham 2022-08-18 15:04:59 UTC
I can't, but I will contact KDE's sysadmins who can clean it up.
Comment 15 Wolfgang.W 2022-08-18 15:12:16 UTC
[Removed due to containing sensitive information]
Comment 16 Ben Cooksley 2022-08-19 22:06:54 UTC
The content of attachment 151406 [details] has been deleted for the following reason:

[Removed due to containing sensitive information]
Comment 17 Ben Cooksley 2022-08-19 22:07:18 UTC
The content of attachment 151408 [details] has been deleted for the following reason:

[Removed due to containing sensitive information]
Comment 18 Ben Cooksley 2022-08-19 22:09:02 UTC
The sensitive information has now been cleaned from this bug.

I'd recommend making replies within Bugzilla itself going forward rather than through your email client as that will give you greater control over what is published.
Comment 19 Wolfgang.W 2022-08-20 05:27:42 UTC
Thank you verry much....   :-)


Am Samstag, 20. August 2022, 00:06:54 CEST schrieben Sie:
> https://bugs.kde.org/show_bug.cgi?id=458007
>
> --- Comment #16 from Ben Cooksley <bcooksley@kde.org> ---
> The content of attachment 151406 [details] has been deleted for the following reason:
>
> [Removed due to containing sensitive information]
Comment 20 Nate Graham 2022-08-22 17:26:32 UTC
Can you provide the requested screen recording now? It would be much appreciated. :)
Comment 21 Wolfgang.W 2022-08-23 06:52:43 UTC
Created attachment 151514 [details]
KDE start, with window bar permanently displayed. Icons move toward the center of the screen

Thank you for your help  :-)
Comment 22 Nate Graham 2022-08-25 06:54:54 UTC
Got it, I see now. So the panel changes your desktop dimensions when it appears, so that the icons on the desktop move around. This is currently the intended design, but we could potentially change it to reserve some space where the panel *will* appear, before it's appeared.

Do you have the splash screen disabled? Or does the splash screen appear, and then it disappears, and then after that, the panel appears?
Comment 23 Wolfgang.W 2022-08-25 09:20:00 UTC
No, the start screen is not disabled, but when I auto-hide the panel, the icons slide down, including under the panel, and stay where they are. The error occurs on the panel that is normally always visible and pushes the icons further and further up, away from the panel. If the panel is on the right or left, keep going towards the center. What I also think is important, I work with activities. That means I never have the same desktop, but change it from time to time.
Comment 24 Nate Graham 2022-08-26 09:29:00 UTC
> No, the start screen is not disabled, but when I auto-hide the panel, the icons slide down, including under the panel, and stay where they are. 
Yep that's expected.

I think the resolution here is to reserve space on the desktop for a non-auto-hide panel even before it's loaded on boot, so that the desktop icons don't shift around once it does load.
Comment 25 Wolfgang.W 2022-08-26 09:54:06 UTC
is this resolution so unusual?

-Session-
Type		: x11
-Wayland-
Current Display Name		: (Not Available)
-X Server-
Current Display Name		: :0
Hersteller		: The X.Org Foundation
Version		: 21.1.4
Release Number		: 12101004
-Screens-
Screen 0		: 1920x1080 pixels
-Outputs (XRandR)-
DVI-D-1		: Disconnected; Unused
DP-1		: Disconnected; Unused
DP-2		: Disconnected; Unused
HDMI-1		: Connected; 1920x1080 pixels, offset (0, 0)
DP-3		: Disconnected; Unused
-OpenGL (GLX)-
Hersteller		: nouveau
Renderer		: NV136
Direct-Rendering		: Ja
Version (Compatibility)		: 4.3 (Compatibility Profile) Mesa 22.1.6
Shading Language Version (Compatibility)		: 4.30
Version (Core)		: 4.3 (Core Profile) Mesa 22.1.6
Shading Language Version (Core)		: 4.30
Version (ES)		: OpenGL ES 3.2 Mesa 22.1.6
Shading Language Version (ES)		: OpenGL ES GLSL ES 3.20
GLX Version		: 1.4
Comment 26 Wolfgang.W 2022-10-05 10:50:52 UTC
is the Problem solved ?
Comment 27 Wolfgang.W 2022-10-24 17:11:13 UTC
yes, it works, thank you
Comment 28 Nate Graham 2023-04-09 20:09:18 UTC
*** Bug 424662 has been marked as a duplicate of this bug. ***
Comment 29 Nate Graham 2023-04-09 20:18:39 UTC
Not fixed yet; icons still move when the panel appears because space is not reserved for them.
Comment 30 Nate Graham 2023-04-20 21:40:31 UTC
*** Bug 468733 has been marked as a duplicate of this bug. ***
Comment 31 francisco_t 2023-04-21 00:00:37 UTC
(In reply to Nate Graham from comment #30)
> *** Bug 468733 has been marked as a duplicate of this bug. ***

In my case (https://bugs.kde.org/show_bug.cgi?id=468733) the problem is the vertical panel moves the icons many columns randomly.
Original icons: https://bugs.kde.org/attachment.cgi?id=158244
Moved icons: https://bugs.kde.org/attachment.cgi?id=158245

Is it the same problem?
Comment 32 Nate Graham 2023-04-21 14:20:52 UTC
Same root cause of the desktop resolution changing during the panel appearance animation, which triggers icon-position-changing code to run inappropriately.
Comment 33 Artem 2023-05-30 14:43:43 UTC
Created attachment 159348 [details]
Icons positions before
Comment 34 Artem 2023-05-30 14:44:06 UTC
Created attachment 159349 [details]
Icons positions after
Comment 35 Artem 2023-05-30 14:46:24 UTC
Created attachment 159350 [details]
Icons positions after
Comment 36 Artem 2023-05-30 14:47:48 UTC
Hello
Same issue here.
Icons positions before reboot: https://bugsfiles.kde.org/attachment.cgi?id=159348
Icons positions after reboot: https://bugsfiles.kde.org/attachment.cgi?id=159350

KDE Plasma 5.27.5
Comment 37 Nate Graham 2024-10-22 18:17:45 UTC
*** Bug 492003 has been marked as a duplicate of this bug. ***
Comment 38 EpicTux123 2024-10-22 18:44:28 UTC
(A response for https://bugs.kde.org/show_bug.cgi?id=492003#c11, but also worth commenting it here.)

I don't know if the fact of icon scrambling can be considered a missing "feature". As far as I know (but I could be wrong), KDE defaults to the taskbar always being visible ("non-auto-hide").

Due to the fact that this causes problems for those who have several icons on the desktop (like my case here), having to fix the icons almost every reboot or using them in a completely messy way is a very bad thing. In my opinion, it is a bug of very high importance, and not something that "will be fixed eventually". I ask the devs to consider changing the importance of this bug from "minor" to "major".

For example, when comparing KDE to GNOME, by default, GNOME does not allow icons on the desktop, so having something in KDE that does not work properly is certainly sad.

I've been suffering from this bug since Plasma version 5. I started using Plasma with Fedora Linux 39.
Comment 39 Nate Graham 2024-10-22 19:09:39 UTC
This definitely doesn't meet the qualifications for major (no workaround, or the workaround is painful and difficult), but the fact that it affects the default configuration means that we can at least raise it to normal.
Comment 40 Bug Janitor Service 2024-11-22 09:21:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2641
Comment 41 Akseli Lahtinen 2024-11-25 14:14:11 UTC
Git commit a6fdc66486bc951ee5a6002d9b3332cf2319d737 by Akseli Lahtinen.
Committed on 25/11/2024 at 14:14.
Pushed by akselmo into branch 'master'.

positioner: Load icon positions on perStripe changes

Previously we did not load the icon positions before updating on
perStripe change. This meant that we never "reclaimed" any lost space,
for example when user has a panel on left side of the icons which
causes them to move on initial loading.

We should just load the positions every time perStripe changes to make
sure the icons reclaim their space if needed.

This adds a flag parameter to loadAndApplyPositionsConfig, which can be used to
skip loading perStripe from config when it changes.

M  +3    -1    containments/desktop/plugins/folder/autotests/positionertest.cpp
M  +3    -3    containments/desktop/plugins/folder/positioner.cpp
M  +9    -2    containments/desktop/plugins/folder/positioner.h

https://invent.kde.org/plasma/plasma-desktop/-/commit/a6fdc66486bc951ee5a6002d9b3332cf2319d737