positioner: Load icon positions on perStripe changes

Previously we did not load the icon positions before updating on
perStripe change. This meant that we never "reclaimed" any lost space,
for example when user has a panel on left side of the icons which
causes them to move on initial loading.

We should just load the positions every time perStripe changes to make
sure the icons reclaim their space if needed.

BUG:458007