containments/desktop/plugins/folder/autotests/positionertest.cpp
@@ -87,7 +87,9 @@ void PositionerTest::tst_default_positions()
     // Since we are not using configs, make sure our positions is clean before test
     m_positioner->reset();
     m_positioner->m_positions = QStringList();
-    m_positioner->setPerStripe(perStripe);
+    m_positioner->m_perStripe = perStripe;
+    m_positioner->convertFolderModelData();
+    m_positioner->updateResolution();
     m_positioner->updatePositionsList();
     checkDefaultPositions(perStripe);
 }
